# oyster-monorepo

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  CommonChainExecutors.json  CommonChainJobs.json  Dockerfile  Executors.json  Jobs.json  LICENSE.txt  Pulumi.yaml  README.md  allocator.yaml  ami-copy.sh  ami-delete.sh  ami-public.sh  attestation.go  bandwidth-rates.json  common_chain_contract.json  enclave-amd64.txt  enclave-arm64.txt  flake.nix  go.mod  go.sum  index.ts  main.go  oyster_rates_setup.js  oyster_serverless_executor_config.json  package-lock.json  package.json  rates.json  setup.sh  sock_raw.c  supervisord.conf  systems.nix  vsock_to_ip_raw.c
.cargo/: config.toml
amd64/: flake.nix
arm64/: flake.nix
attestation/server/: Cargo.toml  README.md  default.nix
attestation/server-custom/: Cargo.toml  README.md
attestation/server-custom-mock/: Cargo.toml  LICENSE.txt  README.md  default.nix
attestation/server-custom-mock/src/: leaf.crt  leaf.key  lib.rs  main.rs  root.crt  root.key
attestation/server-custom-mock/src/certs/: leaf.crt  leaf.key  root.crt
attestation/server-custom/src/: lib.rs  main.rs
attestation/server/docker/: Dockerfile  build-nitro-enclave.sh  id_ed25519.pub
attestation/server/src/: main.rs
attestation/verifier/: Cargo.toml  README.md  default.nix
attestation/verifier-enclave/: README.md  default.nix
attestation/verifier-enclave/amd64/: flake.nix
attestation/verifier-enclave/arm64/: flake.nix
attestation/verifier-risczero/: .gitignore  README.md
attestation/verifier-risczero/host/: Cargo.toml
attestation/verifier-risczero/host/src/: main.rs
attestation/verifier-risczero/methods/: Cargo.toml
attestation/verifier-risczero/methods/guest/: Cargo.toml
attestation/verifier-risczero/methods/guest/src/: main.rs
attestation/verifier/src/: handler.rs
attestation/verifier/src/test/: attestation.hex  secp256k1.pub  secp256k1.sec
cmd/salmon/: main.go  proxies.conf
cmd/tuna/: main.go  oyster-init-server.conf  proxies.conf
connect/: scp_util.go  ssh_util.go
contracts/indexer/: Cargo.toml  README.md
contracts/indexer/migrations/2024-09-11-102200_create_providers/: up.sql
contracts/indexer/migrations/2024-09-12-185350_create_jobs/: down.sql
contracts/indexer/migrations/2024-10-16-094037_create_transactions/: down.sql
contracts/indexer/src/: lib.rs
contracts/indexer/src/handlers/: job_metadata_updated.rs  job_opened.rs  job_revise_rate_finalized.rs  job_revise_rate_initiated.rs  job_settled.rs  lock_created.rs  provider_removed.rs
host/: Cargo.toml
host/src/: main.rs
initialization/init-server/: Cargo.toml  README.md
initialization/init-server/src/: main.rs
initialization/keygen/: Cargo.toml  README.md
initialization/vet/: Cargo.toml  README.md
instances/: describe_instance.go  modify_state_instance.go
kernels/: LICENSE.txt  README.md  build.patch  serverless.nix  serverless.patch  tuna.nix  tuna.patch  vanilla.nix
keypairs/: change_keys.go  describe_keys.go
methods/: build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
migrations/2024-09-11-091649_create_providers/: down.sql
migrations/2024-09-11-094832_create_sync/: up.sql
migrations/2024-09-12-185350_create_jobs/: down.sql  up.sql
migrations/2024-09-15-151144_create_revise_rate_requests/: down.sql  up.sql
migrations/2024-10-16-094037_create_transactions/: down.sql  up.sql
networking/iperf3-enclave/: README.md
networking/iperf3-enclave/salmon/: default.nix  setup.sh  supervisord.conf
networking/iperf3-enclave/salmon/amd64/: flake.nix
networking/iperf3-enclave/salmon/arm64/: flake.nix
networking/iperf3-enclave/tuna/: default.nix  supervisord.conf
networking/raw-proxy/: Cargo.toml  README.md
networking/raw-proxy/src/: lib.rs
networking/tcp-proxy/: Cargo.toml  README.md  default.nix
operator/control-plane/: Cargo.toml  LICENSE.txt  README.md
operator/control-plane/src/: aws.rs  market.rs  server.rs  test.rs
operator/quota-monitor-aws/: Cargo.toml  README.md
operator/quota-monitor-aws/src/: current_usage.rs  scheduled_tasks.rs  service_quotas.rs
operator/setup-aws/: .gitignore  README.md  ami-delete.sh  go.mod  oyster_rates_setup.js  package.json
operator/setup-aws/cmd/salmon/: main.go
operator/setup-aws/cmd/tuna/: main.go  proxies.conf
operator/setup-aws/instances/: describe_instance.go  modify_state_instance.go
operator/setup-aws/keypairs/: change_keys.go
salmon/: setup.sh  supervisord.conf
sdks/docker-enclave/: default.nix  docker-compose.yml  setup.sh  supervisord.conf
sdks/go/: attestation.go  go.mod
sdks/rs/: Cargo.toml
serverless/executor/: Cargo.toml  Dockerfile  README.md  supervisord.conf
serverless/executor/src/: tests.rs  timeout_handler.rs
src/: attestationdoc.rs  cgroups.rs  cgroups_retriever.rs  cli_attestation_verifier.rs  config.rs  current_usage.rs  event_handler.rs  handler.rs  handlers.rs  ip_to_vsock_raw.cpp  ip_to_vsock_raw.rs  ip_to_vsock_raw_incoming.rs  ip_to_vsock_raw_outgoing.rs  job_handler.rs  lib.rs  main.rs  node_handler.rs  scheduled_tasks.rs  schema.rs  service_quotas.rs  tests.rs  timeout_handler.rs  types.rs  utils.rs  vsock_to_ip_raw.cpp  vsock_to_ip_raw.rs  vsock_to_ip_raw_incoming.rs  vsock_to_ip_raw_outgoing.rs  workerd.rs
src/config/: default.toml  mod.rs
src/handlers/: attestationdoc.rs  job_closed.rs  job_deposited.rs  job_metadata_updated.rs  job_opened.rs  job_revise_rate_cancelled.rs  job_revise_rate_finalized.rs  job_revise_rate_initiated.rs  job_settled.rs  job_withdrew.rs  lock_created.rs  lock_deleted.rs  mod.rs  provider_added.rs  provider_removed.rs  provider_updated_with_cp.rs  status.rs  test_db.rs
src/test/: attestation.hex  attestation.json
src/types/: handlers.rs
tuna/: supervisord.conf
tuna/amd64/: flake.nix
tuna/arm64/: flake.nix
