[package]
name = "oyster-indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "oyster_indexer"
path = "src/lib.rs"

[dependencies]
alloy = { version = "0.3.3", features = ["full"] }
anyhow = "1.0.87"
diesel = { version = "2.2.4", features = ["postgres", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
