[package]
name = "oyster-indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "oyster_indexer"
path = "src/lib.rs"

[dependencies]
alloy = { version = "0.3.3", features = ["full"] }
anyhow = "1.0.87"
bigdecimal = "0.4.5"
diesel = { version = "2.2.4", features = ["postgres", "sqlite"] }
dotenvy = "0.15.7"
ethp = "0.1.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
