[package]
name = "oyster-attestation-verifier"
version = "2.1.0"
edition = "2021"

[[bin]]
name = "oyster-attestation-verifier"
path = "src/main.rs"

[[bin]]
name = "oyster-verify-attestation"
path = "src/cli_attestation_verifier.rs"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
ethers = "2.0.14"
hex = "0.4.3"
hex-literal = "0.4.1"
libsodium-sys-stable = "1.22.1"
oyster-sdk = "0.8.4"
secp256k1 = { version = "0.30.0", features = ["recovery"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
