[package]
name = "oyster-init-server"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = "0.6.20"
clap = { version = "4.5.1", features = ["derive"] }
hyper = { version = "0.14.28", features = ["full"] }
libc = "0.2.153"
tokio = { version = "1.36.0", features = ["full"] }
tokio-vsock = "0.4.0"

[profile.release]
lto = true
