[package]
name = "oyster-aws-quota-monitor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.69"
aws-config = "0.56.0"
aws-sdk-ec2 = "0.29.0"
aws-sdk-servicequotas = "0.29.0"
aws-types = "0.56.0"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
