[package]
name = "oyster-sdk"
version = "0.8.4"
edition = "2021"
description = "Oyster SDK"
license = "MIT"

[dependencies]
aws-nitro-enclaves-cose = "0.5.2"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
hex = "0.4.3"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["full"] }
libsodium-sys-stable = { version = "1.22.1" }
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0.215"
serde_cbor = "0.11.2"
serde_json = "1.0"
snow = "0.9.6"
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum = "0.7.9"
http = "1.1.0"
hyper = { version = "1.5.1", features = ["client", "http1", "http2", "server"] }
tower = { version = "0.5.1", features = ["full"] }

[lib]
name = "oyster"

[[bin]]
name = "verifier"
path = "src/main.rs"

[[example]]
name = "scallop"
path = "examples/scallop.rs"

[[example]]
name = "hyper"
path = "examples/hyper.rs"

[[example]]
name = "axum"
path = "examples/axum.rs"

[profile.release]
strip = true
lto = true
panic = "abort"
