[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
p384 = { version = "0.13.0", features = ["ecdsa-core"] }
risc0-zkvm = { version = "=1.1.2", default-features = false, features = [
    "std",
    "getrandom",
] }
sha2 = "0.10.8"
x509-cert = "0.2.5"
puffin = "0.19.1"
